chore(kotlin): updated kotlin version 1.9.21