@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.9.20'
+    ext.kotlin_version = '1.9.21'
     repositories {
         jcenter()
         google()
@@ -24,8 +24,8 @@ allprojects {
 }
 
 ext {
-    versionCode = 38
-    versionName = "2.9.3"
+    versionCode = 39
+    versionName = "2.9.4"
     minSdkVersion = 23
     compileSdkVersion = 35
     junitVersion = '4.13.2'
@@ -34,4 +34,19 @@ ext {
     hamcrestVersion = '1.3'
     glideVersion = '4.15.1'
     materialVersion = '1.13.0-alpha04'
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "17" // or "11", depending on your JDK version
+        freeCompilerArgs += [
+                "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+        ]
+    }
 }
